=== HEAD

* Fix alter table emulation on SQLite when foreign keys reference the table being altered (jeremyevans)

* Fix progress shared adapter, broken since the dataset literalization refactoring (jeremyevans) (#414)

* Support :map and :to_hash prepared statement types (jeremyevans)

* Make Dataset#naked! work correctly (jeremyevans)

* Remove Dataset#paginate!, as it was broken (jeremyevans)

* Fix query extension to not break usage of #clone without arguments (jeremyevans) (#413)

=== 3.31.0 (2012-01-03)

* Dataset#from no longer handles :a__b__c___d as a.b.c AS d (jeremyevans)

* Support many_to_one associations with the same name as their column, using the :key_column option (jeremyevans)

* Add Model.def_column_alias for defining alias methods for columns (jeremyevans)

* Support :server option in Dataset#import and #multi_insert (jeremyevans)

* Respect existing RETURNING/OUTPUT clauses in #import/#multi_insert on PostgreSQL/MSSQL (jeremyevans)

* Support :return=>:primary_key option to Dataset#import and #multi_insert (jeremyevans)

* Correctly handle return value for Dataset#insert with column array and value array on PostgreSQL <8.2 (jeremyevans)

* Dataset#insert_multiple now returns an array of inserted primary keys (jeremyevans) (#408)

* Support RETURNING with DELETE and UPDATE on PostgreSQL 8.2+ (funny-falcon)

* Raise error if tables from two separate schema are detected when parsing the schema for a single table on PostgreSQL (jeremyevans)

* Handle clob types as string instead of blob on H2 (jeremyevans)

* Add database type support to the mock adapter, e.g. mock://postgres (jeremyevans)

* Allow creation of full text indexes on Microsoft SQL Server, but you need to provide a :key_index option (jeremyevans)

* Allow Dataset#full_text_search usage with prepared statements (jeremyevans)

* Make Dataset#exists use a PlaceholderLiteralString so it works with prepared statements (jeremyevans)
